--- a/vertigo-starter/pom.xml
+++ b/vertigo-starter/pom.xml
@@ -20,13 +20,17 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>io.vertigo</groupId>
-	<artifactId>vertigo</artifactId>
-	<version>1.2.0-SNAPSHOT</version>
-	<name>vertigo</name>
-	<packaging>jar</packaging>
-	<url>http://maven.apache.org</url>
 
+	<parent>
+		<groupId>io.vertigo</groupId>
+		<artifactId>vertigo-parent</artifactId>
+		<version>0.1.0</version>
+	</parent>
+
+	<artifactId>vertigo-starter</artifactId>
+	<packaging>jar</packaging>
+	<name>vertigo starter</name>
+	
 	<build>
 		<resources>
 			<resource>
