--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,20 @@
 	<packaging>pom</packaging>
 	<url>www.kleegroup.com</url>
 	
+	<properties>
+    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  	</properties>
+  
 	<modules>
 		<module>vertigo-starter</module>
+		<!-- module>vertigo-ccc</module-->
 	</modules>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
