--- a/vertigo-starter/pom.xml
+++ b/vertigo-starter/pom.xml
@@ -29,7 +29,7 @@
 
 	<artifactId>vertigo-starter</artifactId>
 	<packaging>jar</packaging>
-	<name>vertigo starter</name>
+	<name>vertigo-starter</name>
 	
 	<build>
 		<resources>
