--- a/pom.xml
+++ b/pom.xml
@@ -18,32 +18,33 @@
     limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	
-	<groupId>io.vertigo</groupId>
-	<artifactId>vertigo-parent</artifactId>
-	<version>0.1.0</version>
-	<name>vertigo</name>
-	<packaging>pom</packaging>
-	<url>www.kleegroup.com</url>
-	
-	<properties>
-		<compileSource>1.7</compileSource>
-    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  	</properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<modules>
-		<module>vertigo-starter</module>
-		<module>vertigo-ccc</module>
-		<module>vertigo-rest</module>
-	</modules>
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+    <groupId>io.vertigo</groupId>
+    <artifactId>vertigo-parent</artifactId>
+    <version>0.1.0</version>
+    <name>vertigo</name>
+    <packaging>pom</packaging>
+    <url>www.kleegroup.com</url>
+
+    <properties>
+        <compileSource>1.7</compileSource>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <modules>
+        <module>vertigo-starter</module>
+        <module>vertigo-ccc</module>
+        <module>vertigo-rest</module>
+    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
