--- a/vertigo-rest/pom.xml
+++ b/vertigo-rest/pom.xml
@@ -1,32 +1,50 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>io.vertigo</groupId>
-    <artifactId>vertigo-parent</artifactId>
-    <version>0.1.0</version>
-  </parent>
-  
-  <artifactId>vertigo-rest</artifactId>
-  <name>vertigo-rest</name>
-  
-  <dependencies>
-  <dependency>
-  	<groupId>io.vertigo</groupId>
-  	<artifactId>vertigo-starter</artifactId>
-  	<version>0.1.0</version>
-  </dependency>
-  		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-bundle</artifactId>
-			<version>1.17.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-grizzly2</artifactId>
-			<version>1.17.1</version>
-		</dependency>
-  </dependencies>
+    <parent>
+        <groupId>io.vertigo</groupId>
+        <artifactId>vertigo-parent</artifactId>
+        <version>0.1.0</version>
+    </parent>
+
+    <artifactId>vertigo-rest</artifactId>
+    <name>vertigo-rest</name>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <configuration>
+                        <source>${compileSource}</source>
+                        <target>${compileSource}</target>
+                        <encoding>${project.build.sourceEncoding}</encoding>
+                    </configuration>
+                </plugin>
+
+            </plugins>
+        </pluginManagement>
+    </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>io.vertigo</groupId>
+            <artifactId>vertigo-starter</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-bundle</artifactId>
+            <version>1.17.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-grizzly2</artifactId>
+            <version>1.17.1</version>
+        </dependency>
+    </dependencies>
 </project>
