--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,9 @@
 	<packaging>pom</packaging>
 	<url>www.kleegroup.com</url>
 	
-	<properties>
-		<compileSource>1.7</compileSource>
+	<properties>	
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
     	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   	</properties>
 
