--- a/vertigo-rest/pom.xml
+++ b/vertigo-rest/pom.xml
@@ -13,20 +13,30 @@
   <name>vertigo-rest</name>
   
   <dependencies>
-  <dependency>
-  	<groupId>io.vertigo</groupId>
-  	<artifactId>vertigo-starter</artifactId>
-  	<version>0.1.0</version>
-  </dependency>
-  		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-bundle</artifactId>
-			<version>1.17.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-grizzly2</artifactId>
-			<version>1.17.1</version>
-		</dependency>
-  </dependencies>
+  	<dependency>
+ 	 	<groupId>io.vertigo</groupId>
+  		<artifactId>vertigo-starter</artifactId>
+  		<version>0.1.0</version>
+  	</dependency>
+  	<dependency>
+		<groupId>com.sun.jersey</groupId>
+		<artifactId>jersey-bundle</artifactId>
+		<version>1.17.1</version>
+	</dependency>
+	<dependency>
+		<groupId>com.sun.jersey</groupId>
+		<artifactId>jersey-grizzly2</artifactId>
+		<version>1.17.1</version>
+	</dependency>
+	<dependency>
+		<groupId>redis.clients</groupId>
+		<artifactId>jedis</artifactId>
+		<version>2.1.0</version>
+	</dependency>
+	<dependency>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>2.2.3</version>
+	</dependency>
+	</dependencies>
 </project>
