--- a/vertigo-ccc/pom.xml
+++ b/vertigo-ccc/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>io.vertigo</groupId>
     <artifactId>vertigo-parent</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.0-snapshot</version>
   </parent>
   
   <artifactId>vertigo-ccc</artifactId>
