--- a/vertigo-rest/pom.xml
+++ b/vertigo-rest/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.vertigo</groupId>
     <artifactId>vertigo-parent</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.0-snapshot</version>
   </parent>
   
   <artifactId>vertigo-rest</artifactId>
