--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
 	<groupId>io.vertigo</groupId>
 	<artifactId>vertigo-parent</artifactId>
-	<version>0.1.0-snapshot</version>
+	<version>0.1.0-SNAPSHOT</version>
 	<name>vertigo</name>
 	<packaging>pom</packaging>
 	<description> </description>
