--- a/vertigo-starter/pom.xml
+++ b/vertigo-starter/pom.xml
@@ -24,7 +24,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
-		<version>0.1.0-snapshot</version>
+		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>vertigo-starter</artifactId>
@@ -86,7 +86,7 @@
 				</executions>
 			</plugin>
 
-			<plugin>
+			<!-- <plugin>
 				<groupId>com.atlassian.docco</groupId>
 				<artifactId>atlassian-docco-maven</artifactId>
 				<version>1.0-beta4</version>
@@ -103,7 +103,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin> -->
 
 			<!-- license:format -->
 			<plugin>
