--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
 	<groupId>io.vertigo</groupId>
 	<artifactId>vertigo-parent</artifactId>
-	<version>0.1.0</version>
+	<version>0.2.0-SNAPSHOT</version>
 	<name>vertigo</name>
 	<packaging>pom</packaging>
 	<description> </description>
@@ -50,7 +50,7 @@
 		<developerConnection>scm:git:git@github.com:vertigo-io/vertigo.git</developerConnection>
 		<url>git:github.com:vertigo-io/vertigo</url>
 	  	<tag>vertigo-0.1.0</tag>
-  </scm>
+ 	</scm>
 
 	<properties>
 		<maven.compiler.source>1.7</maven.compiler.source>
