--- a/vertigo-starter/pom.xml
+++ b/vertigo-starter/pom.xml
@@ -18,7 +18,8 @@
     limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -30,14 +31,16 @@
 	<artifactId>vertigo-starter</artifactId>
 	<packaging>jar</packaging>
 	<name>vertigo-starter</name>
+	<description>Vertigo is a simple java starter</description>
+	<url>http://vertigo.io</url>
 
 	<scm>
 		<connection>scm:git:git@github.com:vertigo-io/vertigo.git</connection>
 		<developerConnection>scm:git:git@github.com:vertigo-io/vertigo.git</developerConnection>
 		<url>git:github.com:vertigo-io/vertigo</url>
-	  	<tag>vertigo-0.1.0</tag>
- 	</scm>
-	
+		<tag>vertigo-0.1.0</tag>
+	</scm>
+
 	<build>
 		<resources>
 			<resource>
@@ -53,7 +56,7 @@
 				</excludes>
 			</resource>
 		</resources>
-		
+
 		<testResources>
 			<testResource>
 				<directory>src/test/java</directory>
@@ -73,7 +76,7 @@
 
 			</plugins>
 		</pluginManagement>
-		
+
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -205,7 +208,7 @@
 			<version>2.2.2</version>
 		</dependency>
 	</dependencies>
-	
+
 	<pluginRepositories>
 		<pluginRepository>
 			<id>atlassian-public</id>
