--- a/vertigo-commons-impl/pom.xml
+++ b/vertigo-commons-impl/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
-		<version>0.3.0-SNAPSHOT</version>
+		<version>0.2.1</version>
 	</parent>
 
 	<artifactId>vertigo-commons-impl</artifactId>
@@ -17,19 +17,19 @@
 		<dependency>
 			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-commons-api</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
+			<version>0.2.1</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-starter</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
+			<version>0.2.1</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-starter</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
+			<version>0.2.1</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
