--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>io.vertigo</groupId>
 	<artifactId>vertigo-parent</artifactId>
-	<version>0.2.1</version>
+	<version>0.3.0-SNAPSHOT</version>
 	<name>vertigo</name>
 	<packaging>pom</packaging>
 	<description>Vertigo is a simple java project starter</description>
@@ -35,7 +35,7 @@
 		<connection>scm:git:https://github.com/vertigo-io/vertigo.git</connection>
 		<developerConnection>scm:git:https://github.com/vertigo-io/vertigo.git</developerConnection>
 		<url>scm:git:https://github.com/vertigo-io/vertigo.git</url>	
-		<tag>vertigo-0.2.1</tag>
+		<tag>vertigo-0.2.0</tag>
 	</scm>
 
 	<properties>
