--- a/vertigo-commons-api/pom.xml
+++ b/vertigo-commons-api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
-		<version>0.2.1</version>
+		<version>0.3.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>vertigo-commons-api</artifactId>
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-starter</artifactId>
-			<version>0.2.1</version>
+			<version>0.3.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
