--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- vertigo - simple java starter Copyright (C) 2013, KleeGroup, direction.technique@kleegroup.com (http://www.kleegroup.com) KleeGroup, Centre d'affaire la Boursidiere - BP 159 - 92357 Le Plessis Robinson Cedex - France Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License. --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<!-- vertigo - simple java starter
+
+Copyright (C) 2013, KleeGroup, direction.technique@kleegroup.com (http://www.kleegroup.com)
+KleeGroup, Centre d'affaire la Boursidiere - BP 159 - 92357 Le Plessis Robinson Cedex - France
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License. -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>io.vertigo</groupId>
-	<artifactId>vertigo-parent</artifactId>
+	<artifactId>vertigo-reactor</artifactId>
 	<version>0.3.0-SNAPSHOT</version>
 	<name>vertigo</name>
 	<packaging>pom</packaging>
@@ -18,96 +34,24 @@
 		</license>
 	</licenses>
 
-	<developers>
-		<developer>
-			<id>phlppchrtn</id>
-			<name>philippe chrétien</name>
-			<email>philippe dot chretien at kleegroup dot com</email>
-		</developer>
-		<developer>
-			<id>NPi2Loup</id>
-			<name>Nicolas Piedeloup</name>
-			<email>nicolas dot piedeloup at kleegroup dot com</email>
-		</developer>
-	</developers>
-
-	<scm>
-		<connection>scm:git:https://github.com/vertigo-io/vertigo.git</connection>
-		<developerConnection>scm:git:https://github.com/vertigo-io/vertigo.git</developerConnection>
-		<url>scm:git:https://github.com/vertigo-io/vertigo.git</url>	
-		<tag>vertigo-0.2.0</tag>
-	</scm>
-
-	<properties>
-		<maven.compiler.source>1.7</maven.compiler.source>
-		<maven.compiler.target>1.7</maven.compiler.target>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-
-	<build>
-		<resources>
-			<resource>
-				<directory>src/main/java</directory>
-				<excludes>
-					<exclude>*.java</exclude>
-				</excludes>
-			</resource>
-			<resource>
-				<directory>src/doc/docco</directory>
-				<excludes>
-					<exclude>*.java</exclude>
-				</excludes>
-			</resource>
-		</resources>
-
-		<testResources>
-			<testResource>
-				<directory>src/test/java</directory>
-				<excludes>
-					<exclude>*.java</exclude>
-				</excludes>
-			</testResource>
-		</testResources>
-		<!-- To define the plugin version in your parent POM -->
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-release-plugin</artifactId>
-					<version>2.4.2</version>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-		<!-- To use the plugin goals in your POM or parent POM -->
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.4.2</version>
-				<dependencies>
-			        <dependency>
-			          <groupId>org.apache.maven.scm</groupId>
-			          <artifactId>maven-scm-provider-gitexe</artifactId>
-			          <version>1.9</version>
-			        </dependency>
-			    </dependencies>
-			</plugin>
-		</plugins>
-	</build>
-
 	<modules>
+		<module>vertigo-parent</module>
 		<module>vertigo-starter</module>
 		<!-- module>vertigo-ccc</module> <module>vertigo-rest</module -->
     <module>vertigo-commons-api</module>
     <module>vertigo-commons-impl</module>
-  </modules>
-
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+ 	</modules>
+ 	
+ 	<build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.1</version>
+        <configuration>
+          <skip>true</skip> <!-- No need to deploy the reactor -->
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  
 </project>
