--- a/vertigo-commons-api/pom.xml
+++ b/vertigo-commons-api/pom.xml
@@ -5,6 +5,7 @@
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
 		<version>0.3.0-SNAPSHOT</version>
+		<relativePath></relativePath>
 	</parent>
 
 	<artifactId>vertigo-commons-api</artifactId>
@@ -15,7 +16,7 @@
 		<dependency>
 			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-starter</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 </project>
