--- a/vertigo-commons-impl/pom.xml
+++ b/vertigo-commons-impl/pom.xml
@@ -5,7 +5,7 @@
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
 		<version>0.3.0-SNAPSHOT</version>
-		<relativePath></relativePath>
+		<relativePath>../vertigo-parent</relativePath>
 	</parent>
 
 	<artifactId>vertigo-commons-impl</artifactId>
