--- a/vertigo-starter/pom.xml
+++ b/vertigo-starter/pom.xml
@@ -25,7 +25,7 @@
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
 		<version>0.3.0-SNAPSHOT</version>
-		<relativePath></relativePath>
+		<relativePath>../vertigo-parent</relativePath>
 	</parent>
 
 	<artifactId>vertigo-starter</artifactId>
