--- a/vertigo-ccc/pom.xml
+++ b/vertigo-ccc/pom.xml
@@ -1,21 +1,36 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>io.vertigo</groupId>
-    <artifactId>vertigo-parent</artifactId>
-    <version>0.1.0-snapshot</version>
-  </parent>
-  
-  <artifactId>vertigo-ccc</artifactId>
-  <name>vertigo-ccc</name>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>io.vertigo</groupId>
+		<artifactId>vertigo-parent</artifactId>
+		<version>0.3.0-SNAPSHOT</version>
+		<relativePath>../vertigo-parent</relativePath>
+	</parent>
 
-  <dependencies>
-	  <dependency>
-	  	<groupId>io.vertigo</groupId>
-	  	<artifactId>vertigo-starter</artifactId>
-	  	<version>0.1.0</version>
-	  </dependency>
-  </dependencies>
+	<artifactId>vertigo-ccc</artifactId>
+	<name>vertigo-ccc</name>
+
+	<dependencies>
+		<dependency>
+			<groupId>io.vertigo</groupId>
+			<artifactId>vertigo-starter</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.vertigo</groupId>
+			<artifactId>vertigo-starter</artifactId>
+			<version>${project.version}</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+	
+	
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.3</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
 </project>
