--- a/vertigo-rest/pom.xml
+++ b/vertigo-rest/pom.xml
@@ -14,13 +14,13 @@
 	<dependencies>
 		<dependency>
 			<groupId>io.vertigo</groupId>
-			<artifactId>vertigo-starter</artifactId>
+			<artifactId>vertigo-core</artifactId>
 			<version>0.3.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.vertigo</groupId>
-			<artifactId>vertigo-starter</artifactId>
+			<artifactId>vertigo-core</artifactId>
 			<version>0.3.0-SNAPSHOT</version>
 			<type>test-jar</type>
 			<scope>test</scope>
