--- a/vertigo-ccc/pom.xml
+++ b/vertigo-ccc/pom.xml
@@ -17,7 +17,7 @@
 			<artifactId>vertigo-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-core</artifactId>
@@ -25,11 +25,18 @@
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.2.3</version>
+		</dependency>
+
+		<!-- json webconsole -->
+		<dependency>
+			<groupId>com.sparkjava</groupId>
+			<artifactId>spark-core</artifactId>
+			<version>1.1.1</version>
 		</dependency>
 	</dependencies>
 </project>
