--- a/vertigo-core/pom.xml
+++ b/vertigo-core/pom.xml
@@ -24,7 +24,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
-		<version>0.3.0-SNAPSHOT</version>
+		<version>0.3.0</version>
 		<relativePath>../vertigo-parent</relativePath>
 	</parent>
 
