DtDefinitions dictionary className configurable (Issue #3)

--- a/vertigo-studio/src/test/java/io/vertigo/studio/tools/test.properties
+++ b/vertigo-studio/src/test/java/io/vertigo/studio/tools/test.properties
@@ -4,3 +4,4 @@ kpr 		= io/vertigo/dynamock/generation.kpr
 generateResourcesFile 	= false
 applicationConfiguration = /META-INF/managers-mda.xml
 project.packagename=io.vertigo.dynamock
+domain.dictionaryClassName=DtDefinitions
