--- a/vertigo-studio/src/test/java/io/vertigo/studio/tools/testFile.properties
+++ b/vertigo-studio/src/test/java/io/vertigo/studio/tools/testFile.properties
@@ -4,3 +4,4 @@ kpr 		= io/vertigo/dynamock/executionWfileinfo.kpr
 generateResourcesFile 	= false
 applicationConfiguration = /META-INF/managers-mda.xml
 project.packagename=io.vertigo.dynamock
+domain.dictionaryClassName=DtDefinitions
