--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@ limitations under the License. -->
 	<modules>
 		<module>vertigo-parent</module>
 		<module>vertigo-core</module>
-		<module>vertigo-ccc</module>
+		<!-- module>vertigo-ccc</module-->
 		<!-- <module>vertigo-rest</module -->
 		<module>vertigo-commons-api</module>
 		<module>vertigo-commons-impl</module>
